--- a/style.css
+++ b/style.css
@@ -91,4 +91,20 @@ p {
 
 .yogaAppbtn {
     background: var(--primary-color);
+padding: 23px 14px;
 }
+
+ @media only screen and (max-width:819px) and (min-width:768px) { 
+h2{text-align: center;
+font-size: 36px;}
+
+.yogaAppbtn{
+
+padding: 13px 10px;
+}
+.hide{
+    display: none;
+}
+    
+}
+    
